fix layout issue

--- a/perfume-product-card/style.css
+++ b/perfume-product-card/style.css
@@ -1,127 +1,190 @@
 :root {
-  --clr-green: hsl(158, 36%, 37%);
-  --clr-cream: hsl(30, 38%, 92%);
+  --clr-primary-400: hsl(158, 36%, 37%);
+  --clr-primary-500: hsl(158, 36%, 20%);
+  --clr-secondary-200: hsl(30, 38%, 92%);
 
-  --clr-dark-green: hsl(158, 36%, 20%);
+  --clr-neutral-900: hsl(212, 21%, 14%);
+  --clr-neutral-400: hsl(228, 12%, 48%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
 
-  --clr-very-dark-blue: hsl(212, 21%, 14%);
-  --clr-dark-grayish-blue: hsl(228, 12%, 48%);
-  --clr-white: hsl(0, 0%, 100%);
+  --ff-accent: "Fraunces", serif;
+  --ff-base: "Montserrat", sans-serif;
+
+  --fw-regular: 500;
+  --fw-bold: 700;
 }
 
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+/*
+  2. Remove default margin
+*/
 * {
   margin: 0;
-  padding: 0;
+}
+/*
+  3. Allow percentage-based heights in the application
+*/
+html,
+body {
+  height: 100%;
+}
+/*
+  Typographic tweaks!
+  4. Add accessible line-height
+  5. Improve text rendering
+*/
+body {
+  line-height: 1.7;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  6. Improve media defaults
+*/
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  7. Remove built-in form typography styles
+*/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+/*
+  8. Avoid text overflows
+*/
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
 
-html {
-  height: 100vh;
+h1,
+h2,
+h3 {
+  line-height: 1;
 }
+
+/* general styling */
 
 body {
-  background-color: var(--clr-cream);
+  font-family: var(--ff-base);
+  font-weight: var(--fw-regular);
   font-size: 0.875rem;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+  color: var(--clr-neutral-400);
+  background-color: var(--clr-secondary-200);
+
+  /* for this project only */
+  display: grid;
+  place-content: center;
+  margin: 1rem;
 }
 
-main {
-  width: 80%;
-  min-width: 350px;
-  margin: 2rem auto;
-  background-color: var(--clr-white);
-  border-radius: 10px;
-}
+/* utilities */
 
-picture img {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px 10px 0 0;
-}
-
-.container {
-  width: 85%;
-  margin: 0 auto;
-}
-
-.subtitle {
-  margin: 25px 0;
-  color: var(--clr-dark-grayish-blue);
-  text-transform: uppercase;
-  letter-spacing: 0.75rem;
-}
-
-h1 {
-  font-family: "Fraunces", sans-serif;
-  font-size: 2rem;
-  columns: var(--clr-very-dark-blue);
-  line-height: 2rem;
-}
-
-p {
-  color: var(--clr-dark-grayish-blue);
-  line-height: 1.25rem;
-}
-
-.price {
+.flex-group {
   display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
   align-items: center;
 }
 
-.price .after-sale {
-  font-family: "Fraunces", sans-serif;
-  font-weight: 700;
-  font-size: 2rem;
-  line-height: 2rem;
-  color: var(--clr-green);
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
-.price .before-sale {
-  font-weight: 500;
-  text-decoration: line-through;
-  padding-left: 1.25rem;
-}
-
+/* button */
 .button {
   cursor: pointer;
-  font-weight: 700;
-  color: var(--clr-white);
-  background-color: var(--clr-green);
-  width: 100%;
-  display: flex;
+  text-decoration: none;
+  display: inline-flex;
+  gap: 0.75rem;
   justify-content: center;
   align-items: center;
+
   border: 0;
-  border-radius: 10px;
-  padding: 0.875rem;
-  margin: 1.5rem 0;
-  background-image: url(/content/images/icon-cart.svg);
-  background-repeat: no-repeat;
-  background-position: calc(50% - 50px);
+  border-radius: 0.5rem;
+  padding: 0.75em 1.5em;
+  background-color: var(--clr-primary-400);
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-bold);
+  font-size: 0.925rem;
 }
 
-.button:hover,
-.button:focus-within {
-  background-color: var(--clr-dark-green);
+.button[data-icon="shopping-cart"]::before {
+  content: "";
+  background-image: url("images/icon-cart.svg");
+  width: 15px;
+  height: 16px;
 }
 
-@media (min-width: 650px) {
-  body {
-    display: grid;
-    place-items: center;
-    height: 100vh;
+.button:is(:hover, :focus) {
+  background-color: var(--clr-primary-500);
+}
+
+/* product styles */
+.product {
+  --content-padding: 1.5rem;
+  --content-spacing: 1rem;
+
+  display: grid;
+  background-color: var(--clr-neutral-100);
+  border-radius: 0.5rem;
+  overflow: hidden;
+  max-width: 600px;
+}
+
+@media (min-width: 600px) {
+  .product {
+    --content-padding: 2rem;
+    grid-template-columns: 1fr 1fr;
   }
-  main {
-    display: flex;
-    max-width: 600px;
-  }
-  picture {
-    width: 50%;
-  }
-  picture img {
-    border-radius: 10px 0 0 10px;
-  }
-  .container {
-    width: 40%;
-  }
+}
+
+.product__content {
+  display: grid;
+  gap: var(--content-spacing);
+  padding: var(--content-padding);
+}
+
+.product__category {
+  font-size: 0.8125rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.product__title {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  color: var(--clr-neutral-900);
+}
+
+.product__price {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  color: var(--clr-primary-400);
 }
